[gd_scene load_steps=11 format=3 uid="uid://7ugbnjaqve78"]

[ext_resource type="Script" path="res://Scene/Locations/staircase_to_the_attic.gd" id="1_1khjj"]
[ext_resource type="Texture2D" uid="uid://bxjc0hpjyowlm" path="res://Sprites/Locations/Staircase_to_the_attic/Staircase_to_the_attic_open.png" id="1_rl2cr"]
[ext_resource type="Texture2D" uid="uid://cs6r6pkgpy0lm" path="res://Sprites/Locations/Staircase_to_the_attic/Staircase_to_the_attic_close.png" id="2_ch76b"]
[ext_resource type="PackedScene" uid="uid://dfgihno87pw4q" path="res://Scene/Items/door_attic.tscn" id="3_hwys0"]
[ext_resource type="AudioStream" uid="uid://brqrkt6regcti" path="res://Sounds/Door.mp3" id="5_1cypb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8kp5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ch76b")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rl2cr")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hut4"]
size = Vector2(413, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1icj0"]
size = Vector2(506.633, 29.9222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcm5o"]
size = Vector2(255.423, 29.9599)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty1we"]
size = Vector2(255.423, 29.9599)

[node name="Staircase_to_the_attic" type="StaticBody2D" groups=["Staircase_to_the_attic"]]
collision_mask = 2
script = ExtResource("1_1khjj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1229.0
offset_top = -701.0
offset_right = 1135.0
offset_bottom = 692.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Staircase_to_the_attic" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_8kp5c")
animation = &"close"

[node name="Door_attic" parent="." instance=ExtResource("3_hwys0")]
position = Vector2(61, -183)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13, 414)
shape = SubResource("RectangleShape2D_0hut4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(113, 172)
rotation = -1.63177
shape = SubResource("RectangleShape2D_1icj0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-113.109, 157.176)
rotation = 1.78046
shape = SubResource("RectangleShape2D_1icj0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(26, -85)
rotation = 3.13974
shape = SubResource("RectangleShape2D_xcm5o")

[node name="CollisionShape2D5_close" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(16, -3)
rotation = 3.13974
shape = SubResource("RectangleShape2D_ty1we")
debug_color = Color(1, 0.00784314, 0.0392157, 0.419608)

[node name="Audio_open_door" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_1cypb")
volume_db = -10.0
bus = &"Sounds"
